gst-libs/gst/gl/dispmanx/gstglwindow_dispmanx_egl.h
@@ -54,6 +54,8 @@ struct _GstGLWindowDispmanxEGL {
   GMainContext *main_context;
   GMainLoop *loop;
 
+  gboolean visible;
+
   gpointer _reserved[GST_PADDING];
 };
 
@@ -68,6 +70,7 @@ struct _GstGLWindowDispmanxEGLClass {
 GType gst_gl_window_dispmanx_egl_get_type     (void);
 
 GstGLWindowDispmanxEGL * gst_gl_window_dispmanx_egl_new  (void);
+gboolean gst_gl_window_dispmanx_egl_create_window (GstGLWindowDispmanxEGL * window_egl);
 
 G_END_DECLS
 
